--- a/data/ui/window.ui
+++ b/data/ui/window.ui
@@ -349,7 +349,7 @@
                                                 </child>
                                                 <child>
                                                   <object class="GtkLabel">
-                                                    <property name="label">Translate</property>
+                                                    <property name="label">Transform</property>
                                                   </object>
                                                 </child>
                                               </object>
