Finish data combination feature

--- a/data/ui/help_overlay.ui
+++ b/data/ui/help_overlay.ui
@@ -38,36 +38,7 @@
         </child>
         <child>
           <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes" context="shortcut window">Mode Switching</property>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Default Mode</property>
-                <property name="action-name">app.mode_none</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Pan Mode</property>
-                <property name="action-name">app.mode_pan</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Zoom Mode</property>
-                <property name="action-name">app.mode_zoom</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Select Mode</property>
-                <property name="action-name">app.mode_select</property>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes" context="shortcut window">Data</property>
+            <property name="title" translatable="yes" context="shortcut window">Importing Data</property>
             <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Open new File</property>
@@ -86,55 +57,8 @@
                 <property name="action-name">app.add_equation</property>
               </object>
             </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Export Data</property>
-                <property name="action-name">app.save_data</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Export Figure</property>
-                <property name="action-name">app.export_data</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Delete Selected Data</property>
-                <property name="action-name">app.delete_selected</property>
-              </object>
-            </child>
-          </object>
-        </child>
-        <child>
-          <object class="GtkShortcutsGroup">
-            <property name="title" translatable="yes" context="shortcut window">View</property>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Restore View</property>
-                <property name="action-name">app.restore_view</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Previous View</property>
-                <property name="action-name">app.view_back</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Next View</property>
-                <property name="action-name">app.view_forward</property>
-              </object>
-            </child>
-            <child>
-              <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Toggle Sidebar</property>
-                <property name="action-name">app.toggle_sidebar</property>
-              </object>
-            </child>
-          </object>
-        </child>
+            </object>
+          </child>
         <child>
           <object class="GtkShortcutsGroup">
             <property name="title" translatable="yes" context="shortcut window">Actions</property>
@@ -152,6 +76,12 @@
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Delete Selected Data</property>
+                <property name="action-name">app.delete_selected</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Undo Action</property>
                 <property name="action-name">app.undo</property>
               </object>
@@ -160,6 +90,12 @@
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Redo Action</property>
                 <property name="action-name">app.redo</property>
+              </object>
+            </child>
+            <child>
+              <object class="GtkShortcutsShortcut">
+                <property name="title" translatable="yes" context="shortcut window">Save data</property>
+                <property name="action-name">app.save_data</property>
               </object>
             </child>
           </object>
