--- a/data/ui/preferences.ui
+++ b/data/ui/preferences.ui
@@ -332,7 +332,7 @@
           <object class="AdwPreferencesGroup">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
-            <property name="title" translatable="yes">Aees settings</property>
+            <property name="title" translatable="yes">Axes settings</property>
             <property name="description" translatable="yes">Set the axes scale and position</property>
              <child>
               <object class="AdwComboRow" id="plot_Y_scale">
